--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 <div class="wrapper">
 		
 <nav id="navbar">
-			<ul>
-			<li><a class="nav-link" href="#home">Home</a></li>
-			<li><a class="nav-link" href="#portfolio">Projects</a></li>
-			<li><a class="nav-link" href="#resume">Resume</a></li>
-			<li><a class="nav-link" href="#contact">Contact</a></li>
-			</ul>
-			
+		<label for="hamburger">&#9776;</label>
+		<input type="checkbox" id="hamburger"/>
+	<ul>
+		<li><a class="nav-link" href="#home">Home</a></li>
+		<li><a class="nav-link" href="#portfolio">Projects</a></li>
+		<li><a class="nav-link" href="#resume">Resume</a></li>
+		<li><a class="nav-link" href="#contact">Contact</a></li>
+	</ul>
 </nav>
 <header></header>
 <section id="welcome-section">
