--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <!--Jo Barkhuizen, Test Analyst, Web Design training-->
-<html>
+<html lang="en">
 <head>
 <title>FCC Personal Portfolio Page</title>
 <link href='http://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister' rel='stylesheet' type='text/css'>
@@ -8,7 +8,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <link href="main.css" rel="stylesheet">
 <link href="responsive.css" rel="stylesheet" media="screen and (max-width: 960px)">
-
+<style>
+</style>
 
 </head>
 <body>
@@ -28,66 +29,82 @@
 </nav>
 <header></header>
 <section id="welcome-section">
-		<a id="home"><h1>Welcome Mate</h1></a>
-	<h4>This is my Portfolio Page</h4>
-	<p>step right in and read all about it....me....
+		<a id="home"><h1 style="font-size: 35px;background:brown;text-align:center;padding:0.5em 0em 0.5em 0em;">Welcome Mate</h1></a>
+		
+	<h1>This is my Portfolio Page</h1
+		<br>
+	<p>A competent Test Analyst with over 10 years’ experience in the testing field.</p>
+	<p>Studied Principles of web design by Joel Sklar and Responsive Web Design Certification through FreeCodeCamp</p>
+	<br>
 		<a id="profile-link" href="https://github.com/JoBarkhuizen" target="_blank">click here: </a>to go to my Github profile.</p>
+		<br>
+		<div id="office-img"><img src="pexels-photo-796602.jpeg" alt="office picture">
+			<p id="img-caption">Photo by Ylanite Koppens, Pexels.com</p></div>
 </section>
 
 <section id="projects">
-	<a id="portfolio"><h2>Projects</h2></a>
-		<section id="col1">
-			<a href="https://github.com/JoBarkhuizen/FreeCodeCampTribute.git" target="_blank"> 
+	<a id="portfolio"><h2 style="margin-bottom: 0;background: brown;text-align:center;">Projects</h2></a>
+	<div class="columns">	
+	<section id="col1"><h3 style="text-align: center;">Tribute Page</h3>
+			<a href="https://jobarkhuizen.github.io/FCC_Tribute_Page/" target="_blank"> 
 				<img class="project-tile" src="tributepage.jpg"  alt="Tribute Page Picture"></a>
-					<h3>Tribute Page</h3>
-						<p>	Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-							 Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, 
-							 ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, 
-							 fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, 
-							 justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper 
-							 nisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
+					<p>The following guidelines was provided for the tribute page.  It should have a div element with a corresponding id="img-div". Within the img-div element, there should be an img element with a 
+							corresponding id="image".  Within the img-div element, there should be an element with a corresponding id="img-caption" that contains textual
+							content describing the image shown in img-div.  There should be an element with a corresponding id="tribute-info", which contains textual content
+							describing the subject of the tribute page. Ther should be an a element with a corresponding id="tribute-link", which links to an outside site 
+							that contains additional information about the subject of the tribute page, this link must open in a new tab.  The img element should responsively
+							resize, relative to the width of its parent element, without exceeding its original size and should be centered within its parent element.
+							</p>
 		</section>
 
-	<section id="col2">
-		<a href="https://github.com/JoBarkhuizen/LandingPage.git" target="_blank">
+	<section id="col2"><h3 style="text-align: center;">Landing Page</h3>
+		<a href="https://jobarkhuizen.github.io/LandingPage/" target="_blank">
 			<img class="project-tile" src="Landingp.jpg" alt="Landing Page Picture"></a> 
-				<h3>Landing Page</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis 
-						natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, 
-						pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, 
-						vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede
-						 mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Lorem ipsum dolor sit amet, 
-						 consectetuer adipiscing elit. </p> 
+				<p>The following guidelines was provided for the product landing page. The page should have a header element with a corresponding id="header".
+						An image within the header element with a corresponding id="header-img".
+						Within the #header element a nav element with a corresponding id="nav-bar".
+						At least three clickable elements inside the nav element, each with the class nav-link.
+						When you click the nav-link button in the nav element, it goes to the corresponding section of the landing page.
+						Embed a watch-able video with id="video".
+						A form element with a corresponding id="form".  Within the form, there is an input field with id="email" where you can enter an email address.
+						The #email input field should have placeholder text to let the user know what the field is for and uses HTML5 validation to confirm text is correct.
+						Within the form, there is a submit input with a corresponding id="submit".</p> 
 	</section>
 
-	<section id="col3"> 
-		<a href="https://github.com/JoBarkhuizen/FCC-Technical-Page.git" target="_blank"> 
+	<section id="col3"><h3 style="text-align: center;">Technical Page</h3> 
+		<a href="https://jobarkhuizen.github.io/FCC-Technical-Page/" target="_blank"> 
 		  <img class="project-tile" src="technicalp.jpg" alt="Technical Page Picture"></a>
-			<h3>Technical Page</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
-					 natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, 
-					 pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, 
-					 vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede 
-					 mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Lorem ipsum dolor sit amet,
-					  consectetuer adipiscing elit. </p> 
-	</section>
+				<p>The following guidelines was provided for the technical page. Should have a main element with a corresponding id="main-doc", which contains the page's main content.
+					Within the #main-doc element, you should have several section elements, each with a class of main-section.
+					The first element within each .main-section should be a header element which contains text that describes the topic of that section.
+					Each section element with the class of main-section should also have an id that corresponds with the text of each header contained within it. 
+					Any spaces should be replaced with underscores (id="Javascript_and_Java").
+					The .main-section elements should contain at least 10 p elements in total.
+					The .main-section elements should contain at least 5 code elements in total.
+					The .main-section elements should contain at least 5 li items in total. A nav element with a corresponding id="navbar".</p> 
+				</section>
 </section>
 
+
 <section>
-		<a id="resume"><h2>Resume</h2></a>
-	<p>Studying Responsive Web Design through FreeCodeCamp.  This is my last project before I can carry on with JavaScript.</p>
-	<p>I will load a personal portfolio page on my Github account as soon as possible, therefore this one must be seen as a practice page.</p>
-	
-
-
-
-	<a id="contact"><h2>Contact</h2></a>
-	<p><img src="clipartphone.png" alt="picture of a telehone">:  843 6666</p>
-	<p><img src="mailclipart.png" alt="picture of an envelope">:  meinthetree@gmail.com</p>
+	<div class="resume">
+		<a id="resume"><h2 style="margin-bottom: 0;background: brown;text-align: center;">Resume</h2></a>
+	<p>Studying Responsive Web Design through FreeCodeCamp.  My next project is studying and completing JavaScript and SQL.</p>
+	<p>I have done automated testing on Winrunner and QTP and managed projects through TestDirector.</p>
+	<p>Did testing in both waterfall and agile development environments. </p>
+	<p>This portfolio page is for Freecodecamp certification.  I have loaded a personal portfolio page on my Github account which I will update as soon as possible.</p>
+</div>
+</section>
+<section>
+	<a id="contact"><h2 style="margin-bottom: 0;background: brown;text-align:center;">Contact</h2></a>
+	<div class="btns">
+	<p><input type="image" name="imgbtn" src="clipartphone.png" alt="phone">: 843 6666</p>
+	<p><input type="image" name="imgbtn" src="mailclipart.png"  alt="email">:  meinthetree@gmail.com</p>
+</div>
 </section>
 
 <footer>
-	<h3>The personal information on this page is fake.</h3>
+	<h3>The contact information on this page is fake.</h3>
 </footer>
 
 </div>
