--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 </nav>
 <header></header>
 <section id="welcome-section">
-		<a id="home"><h1 style="font-size: 35px;background:brown;text-align:center;padding:0.5em 0em 0.5em 0em;">Welcome Mate</h1></a>
+		<a id="home"><h1 style="font-size: 35px;background: brown;text-align:center;padding:0.2em 0em 0.2em 0em;">Welcome Mate</h1></a>
 		
-	<h1>This is my Portfolio Page</h1
-		<br>
+	<h2>This is my Portfolio Page</h2>
+		
 	<p>A competent Test Analyst with over 10 years’ experience in the testing field.</p>
 	<p>Studied Principles of web design by Joel Sklar and Responsive Web Design Certification through FreeCodeCamp</p>
 	<br>
@@ -43,24 +43,24 @@
 </section>
 
 <section id="projects">
-	<a id="portfolio"><h2 style="margin-bottom: 0;background: brown;text-align:center;">Projects</h2></a>
-	<div class="columns">	
+	<a id="portfolio"><h2 style="margin-bottom: 0;background: brown;text-align:center;padding:0.2em 0em 0.2em 0em;">Projects</h2></a>
+		
 	<section id="col1"><h3 style="text-align: center;">Tribute Page</h3>
 			<a href="https://jobarkhuizen.github.io/FCC_Tribute_Page/" target="_blank"> 
 				<img class="project-tile" src="tributepage.jpg"  alt="Tribute Page Picture"></a>
-					<p>The following guidelines was provided for the tribute page.  It should have a div element with a corresponding id="img-div". Within the img-div element, there should be an img element with a 
+					<p><em>The following guidelines was provided for the tribute page.</em>  It should have a div element with a corresponding id="img-div". Within the img-div element, there should be an img element with a 
 							corresponding id="image".  Within the img-div element, there should be an element with a corresponding id="img-caption" that contains textual
 							content describing the image shown in img-div.  There should be an element with a corresponding id="tribute-info", which contains textual content
 							describing the subject of the tribute page. Ther should be an a element with a corresponding id="tribute-link", which links to an outside site 
 							that contains additional information about the subject of the tribute page, this link must open in a new tab.  The img element should responsively
 							resize, relative to the width of its parent element, without exceeding its original size and should be centered within its parent element.
 							</p>
-		</section>
+	</section>
 
 	<section id="col2"><h3 style="text-align: center;">Landing Page</h3>
 		<a href="https://jobarkhuizen.github.io/LandingPage/" target="_blank">
 			<img class="project-tile" src="Landingp.jpg" alt="Landing Page Picture"></a> 
-				<p>The following guidelines was provided for the product landing page. The page should have a header element with a corresponding id="header".
+				<p><em>The following guidelines was provided for the product landing page.</em> The page should have a header element with a corresponding id="header".
 						An image within the header element with a corresponding id="header-img".
 						Within the #header element a nav element with a corresponding id="nav-bar".
 						At least three clickable elements inside the nav element, each with the class nav-link.
@@ -74,7 +74,7 @@
 	<section id="col3"><h3 style="text-align: center;">Technical Page</h3> 
 		<a href="https://jobarkhuizen.github.io/FCC-Technical-Page/" target="_blank"> 
 		  <img class="project-tile" src="technicalp.jpg" alt="Technical Page Picture"></a>
-				<p>The following guidelines was provided for the technical page. Should have a main element with a corresponding id="main-doc", which contains the page's main content.
+				<p><em>The following guidelines was provided for the technical page.</em> Should have a main element with a corresponding id="main-doc", which contains the page's main content.
 					Within the #main-doc element, you should have several section elements, each with a class of main-section.
 					The first element within each .main-section should be a header element which contains text that describes the topic of that section.
 					Each section element with the class of main-section should also have an id that corresponds with the text of each header contained within it. 
@@ -82,25 +82,27 @@
 					The .main-section elements should contain at least 10 p elements in total.
 					The .main-section elements should contain at least 5 code elements in total.
 					The .main-section elements should contain at least 5 li items in total. A nav element with a corresponding id="navbar".</p> 
-				</section>
+	</section>
 </section>
 
 
 <section>
-	<div class="resume">
-		<a id="resume"><h2 style="margin-bottom: 0;background: brown;text-align: center;">Resume</h2></a>
-	<p>Studying Responsive Web Design through FreeCodeCamp.  My next project is studying and completing JavaScript and SQL.</p>
-	<p>I have done automated testing on Winrunner and QTP and managed projects through TestDirector.</p>
-	<p>Did testing in both waterfall and agile development environments. </p>
-	<p>This portfolio page is for Freecodecamp certification.  I have loaded a personal portfolio page on my Github account which I will update as soon as possible.</p>
-</div>
+
+        <a id="resume"><h4 style="background: white;text-align: left;">Select a picture to view the project</h4></a>
+		
+		<a id="resume"><h2 style="background: brown;text-align: center;padding: 0.2em 0em 0.2em 0em;">Resume</h2></a><p>Studying Responsive Web Design through FreeCodeCamp.  My next project is studying and completing JavaScript and SQL.</p>
+	<div class="resume-section">
+		<p>I have done automated testing on Winrunner and QTP and managed projects through TestDirector.</p>
+		<p>Did testing in both waterfall and agile development environments. </p>
+		<p>This portfolio page is for Freecodecamp certification.  I have loaded a personal portfolio page on my Github account which I will update as soon as possible.</p>
+	</div>
 </section>
 <section>
-	<a id="contact"><h2 style="margin-bottom: 0;background: brown;text-align:center;">Contact</h2></a>
+	<a id="contact"><h2 style="margin-bottom: 0;background: brown;text-align:center;padding:0.2em 0em 0.2em 0em;">Contact</h2></a>
 	<div class="btns">
-	<p><input type="image" name="imgbtn" src="clipartphone.png" alt="phone">: 843 6666</p>
-	<p><input type="image" name="imgbtn" src="mailclipart.png"  alt="email">:  meinthetree@gmail.com</p>
-</div>
+		<p><input type="image" name="imgbtn" src="clipartphone.png" alt="phone">: 843 6666</p>
+		<p><input type="image" name="imgbtn" src="mailclipart.png"  alt="email">:  meinthetree@gmail.com</p>
+	</div>
 </section>
 
 <footer>
