--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 </nav>
 <header></header>
 <section id="welcome-section">
-		<a id="home"><h1 style="font-size: 35px;background: brown;text-align:center;padding:0.2em 0em 0.2em 0em;">Welcome Mate</h1></a>
+		<a id="home"><h1 style="font-size: 35px;background: brown;text-align:center;padding:0.2em 100% 0.2em 100%;">Welcome Mate</h1></a>
 		
 	<h2>This is my Portfolio Page</h2>
 		
 	<p>A competent Test Analyst with over 10 years’ experience in the testing field.</p>
 	<p>Studied Principles of web design by Joel Sklar and Responsive Web Design Certification through FreeCodeCamp</p>
-	<br>
-		<a id="profile-link" href="https://github.com/JoBarkhuizen" target="_blank">click here: </a>to go to my Github profile.</p>
+	
+		<p><a id="profile-link" href="https://github.com/JoBarkhuizen" target="_blank">click here: </a>to go to my Github profile.</p>
 		<br>
 		<div id="office-img"><img src="pexels-photo-796602.jpeg" alt="office picture">
 			<p id="img-caption">Photo by Ylanite Koppens, Pexels.com</p></div>
