--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </nav>
 <header></header>
 <section id="welcome-section">
-		<a id="home"><h1 style="font-size: 35px;background: brown;text-align:center;padding:0.2em 100% 0.2em 100%;">Welcome Mate</h1></a>
+		<a id="home"><h1 style="font-size: 35px;background: brown;text-align:center;padding:0.2em 0 0.2em 0;">Welcome Mate</h1></a>
 		
 	<h2>This is my Portfolio Page</h2>
 		
@@ -87,11 +87,8 @@
 
 
 <section>
-
-        <a id="resume"><h4 style="background: white;text-align: left;">Select a picture to view the project</h4></a>
-		
+		<div class="resume-section">
 		<a id="resume"><h2 style="background: brown;text-align: center;padding: 0.2em 0em 0.2em 0em;">Resume</h2></a><p>Studying Responsive Web Design through FreeCodeCamp.  My next project is studying and completing JavaScript and SQL.</p>
-	<div class="resume-section">
 		<p>I have done automated testing on Winrunner and QTP and managed projects through TestDirector.</p>
 		<p>Did testing in both waterfall and agile development environments. </p>
 		<p>This portfolio page is for Freecodecamp certification.  I have loaded a personal portfolio page on my Github account which I will update as soon as possible.</p>
