--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 </nav>
 <header></header>
 <section id="welcome-section">
-		<a id="home"><h1 style="font-size: 35px;background: brown;text-align:center;padding:0.2em 0 0.2em 0;">Welcome Mate</h1></a>
-		
-	<h2>This is my Portfolio Page</h2>
+		<a id="home"></a>
+		<h1>Welcome Mate</h1>
+	<h3>This is my FreeCodeCamp Project Portfolio Page</h3>
 		
 	<p>A competent Test Analyst with over 10 years’ experience in the testing field.</p>
 	<p>Studied Principles of web design by Joel Sklar and Responsive Web Design Certification through FreeCodeCamp</p>
@@ -42,9 +42,9 @@
 			<p id="img-caption">Photo by Ylanite Koppens, Pexels.com</p></div>
 </section>
 
-<section id="projects">
-	<a id="portfolio"><h2 style="margin-bottom: 0;background: brown;text-align:center;padding:0.2em 0em 0.2em 0em;">Projects</h2></a>
-		
+<section>
+	<a id="portfolio"></a>
+	<h2>Projects</h2>
 	<section id="col1"><h3 style="text-align: center;">Tribute Page</h3>
 			<a href="https://jobarkhuizen.github.io/FCC_Tribute_Page/" target="_blank"> 
 				<img class="project-tile" src="tributepage.jpg"  alt="Tribute Page Picture"></a>
@@ -87,15 +87,18 @@
 
 
 <section>
-		<div class="resume-section">
-		<a id="resume"><h2 style="background: brown;text-align: center;padding: 0.2em 0em 0.2em 0em;">Resume</h2></a><p>Studying Responsive Web Design through FreeCodeCamp.  My next project is studying and completing JavaScript and SQL.</p>
+		
+		<a id="resume"></a>
+		<h2>Resume</h2>
+		<p>Studying Responsive Web Design through FreeCodeCamp.  My next project is studying and completing JavaScript and SQL.</p>
 		<p>I have done automated testing on Winrunner and QTP and managed projects through TestDirector.</p>
 		<p>Did testing in both waterfall and agile development environments. </p>
 		<p>This portfolio page is for Freecodecamp certification.  I have loaded a personal portfolio page on my Github account which I will update as soon as possible.</p>
-	</div>
+	
 </section>
 <section>
-	<a id="contact"><h2 style="margin-bottom: 0;background: brown;text-align:center;padding:0.2em 0em 0.2em 0em;">Contact</h2></a>
+	<a id="contact"></a>
+	<h2>Contact</h2>
 	<div class="btns">
 		<p><input type="image" name="imgbtn" src="clipartphone.png" alt="phone">: 843 6666</p>
 		<p><input type="image" name="imgbtn" src="mailclipart.png"  alt="email">:  meinthetree@gmail.com</p>
