--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <link href="main.css" rel="stylesheet">
-<link href="responsive.css" rel="stylesheet" media="screen and (max-width: 960px)">
+<!--<link href="responsive.css" rel="stylesheet" media="screen and (max-width: 960px)">-->
 <style>
 </style>
 
@@ -29,38 +29,33 @@
 </nav>
 <header></header>
 <section id="welcome-section">
-		<a id="home"></a>
-		<h1>Welcome Mate</h1>
-	<h3>This is my FreeCodeCamp Project Portfolio Page</h3>
-		
-	<p>A competent Test Analyst with over 10 years’ experience in the testing field.</p>
-	<p>Studied Principles of web design by Joel Sklar and Responsive Web Design Certification through FreeCodeCamp</p>
-	
+		<a id="home"><h1>Welcome Mate</h1></a>
+		<h3>This is my FreeCodeCamp Project Portfolio Page</h3>
+		<p>A competent Test Analyst with over 10 years’ experience in the testing field.</p>
+		<p>Studied Principles of web design by Joel Sklar and Responsive Web Design Certification through FreeCodeCamp</p>
 		<p><a id="profile-link" href="https://github.com/JoBarkhuizen" target="_blank">click here: </a>to go to my Github profile.</p>
-		<br>
-		<div id="office-img"><img src="pexels-photo-796602.jpeg" alt="office picture">
-			<p id="img-caption">Photo by Ylanite Koppens, Pexels.com</p></div>
+		<img id="office-img" src="pexels-photo-796602.jpeg" alt="picture of stationary">
+		<p>Photo by Ylanite Koppens, Pexels.com</p>
 </section>
 
-<section>
-	<a id="portfolio"></a>
-	<h2>Projects</h2>
-	<section id="col1"><h3 style="text-align: center;">Tribute Page</h3>
+<section id="projects">
+	<a id="portfolio"><h2>Projects</h2></a>
+		<section id="col1"><h3 style="text-align: center;">Tribute Page</h3>
 			<a href="https://jobarkhuizen.github.io/FCC_Tribute_Page/" target="_blank"> 
 				<img class="project-tile" src="tributepage.jpg"  alt="Tribute Page Picture"></a>
-					<p><em>The following guidelines was provided for the tribute page.</em>  It should have a div element with a corresponding id="img-div". Within the img-div element, there should be an img element with a 
+					<p>The following guidelines was provided for the tribute page.  It should have a div element with a corresponding id="img-div". Within the img-div element, there should be an img element with a 
 							corresponding id="image".  Within the img-div element, there should be an element with a corresponding id="img-caption" that contains textual
 							content describing the image shown in img-div.  There should be an element with a corresponding id="tribute-info", which contains textual content
 							describing the subject of the tribute page. Ther should be an a element with a corresponding id="tribute-link", which links to an outside site 
 							that contains additional information about the subject of the tribute page, this link must open in a new tab.  The img element should responsively
 							resize, relative to the width of its parent element, without exceeding its original size and should be centered within its parent element.
 							</p>
-	</section>
+		</section>
 
 	<section id="col2"><h3 style="text-align: center;">Landing Page</h3>
 		<a href="https://jobarkhuizen.github.io/LandingPage/" target="_blank">
 			<img class="project-tile" src="Landingp.jpg" alt="Landing Page Picture"></a> 
-				<p><em>The following guidelines was provided for the product landing page.</em> The page should have a header element with a corresponding id="header".
+				<p>The following guidelines was provided for the product landing page. The page should have a header element with a corresponding id="header".
 						An image within the header element with a corresponding id="header-img".
 						Within the #header element a nav element with a corresponding id="nav-bar".
 						At least three clickable elements inside the nav element, each with the class nav-link.
@@ -74,7 +69,7 @@
 	<section id="col3"><h3 style="text-align: center;">Technical Page</h3> 
 		<a href="https://jobarkhuizen.github.io/FCC-Technical-Page/" target="_blank"> 
 		  <img class="project-tile" src="technicalp.jpg" alt="Technical Page Picture"></a>
-				<p><em>The following guidelines was provided for the technical page.</em> Should have a main element with a corresponding id="main-doc", which contains the page's main content.
+				<p>The following guidelines was provided for the technical page. Should have a main element with a corresponding id="main-doc", which contains the page's main content.
 					Within the #main-doc element, you should have several section elements, each with a class of main-section.
 					The first element within each .main-section should be a header element which contains text that describes the topic of that section.
 					Each section element with the class of main-section should also have an id that corresponds with the text of each header contained within it. 
@@ -85,11 +80,8 @@
 	</section>
 </section>
 
-
 <section>
-		
-		<a id="resume"></a>
-		<h2>Resume</h2>
+		<a id="resume"><h2>Resume</h2></a>
 		<p>Studying Responsive Web Design through FreeCodeCamp.  My next project is studying and completing JavaScript and SQL.</p>
 		<p>I have done automated testing on Winrunner and QTP and managed projects through TestDirector.</p>
 		<p>Did testing in both waterfall and agile development environments. </p>
@@ -97,16 +89,15 @@
 	
 </section>
 <section>
-	<a id="contact"></a>
-	<h2>Contact</h2>
+	<a id="contact"><h2>Contact</h2></a>
 	<div class="btns">
-		<p><input type="image" name="imgbtn" src="clipartphone.png" alt="phone">: 843 6666</p>
-		<p><input type="image" name="imgbtn" src="mailclipart.png"  alt="email">:  meinthetree@gmail.com</p>
+	<p><input type="image" name="imgbtn" src="clipartphone.png" alt="phone">: 843 6666</p>
+	<p><input type="image" name="imgbtn" src="mailclipart.png"  alt="email">:  meinthetree@gmail.com</p>
 	</div>
 </section>
 
 <footer>
-	<h3>The contact information on this page is fake.</h3>
+	<h3>The personal information on this page is fake.</h3>
 </footer>
 
 </div>
