--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <link href="main.css" rel="stylesheet">
-<!--<link href="responsive.css" rel="stylesheet" media="screen and (max-width: 960px)">-->
+<link href="responsive.css" rel="stylesheet" media="screen and (max-width: 960px)">
 <style>
 </style>
 
@@ -29,7 +29,7 @@
 </nav>
 <header></header>
 <section id="welcome-section">
-		<a id="home"><h1>Welcome Mate</h1></a>
+	<h1><a id="home">Welcome Mate</a></h1>
 		<h3>This is my FreeCodeCamp Project Portfolio Page</h3>
 		<p>A competent Test Analyst with over 10 years’ experience in the testing field.</p>
 		<p>Studied Principles of web design by Joel Sklar and Responsive Web Design Certification through FreeCodeCamp</p>
@@ -39,7 +39,7 @@
 </section>
 
 <section id="projects">
-	<a id="portfolio"><h2>Projects</h2></a>
+	<h2><a id="portfolio">Projects</a></h2>
 		<section id="col1"><h3 style="text-align: center;">Tribute Page</h3>
 			<a href="https://jobarkhuizen.github.io/FCC_Tribute_Page/" target="_blank"> 
 				<img class="project-tile" src="tributepage.jpg"  alt="Tribute Page Picture"></a>
@@ -81,7 +81,7 @@
 </section>
 
 <section>
-		<a id="resume"><h2>Resume</h2></a>
+	<h2><a id="resume">Resume</a></h2>
 		<p>Studying Responsive Web Design through FreeCodeCamp.  My next project is studying and completing JavaScript and SQL.</p>
 		<p>I have done automated testing on Winrunner and QTP and managed projects through TestDirector.</p>
 		<p>Did testing in both waterfall and agile development environments. </p>
@@ -89,7 +89,7 @@
 	
 </section>
 <section>
-	<a id="contact"><h2>Contact</h2></a>
+	<h2><a id="contact">Contact</a></h2>
 	<div class="btns">
 	<p><input type="image" name="imgbtn" src="clipartphone.png" alt="phone">: 843 6666</p>
 	<p><input type="image" name="imgbtn" src="mailclipart.png"  alt="email">:  meinthetree@gmail.com</p>
