--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
 	</section>
 </section>
 
-<section>
+<section class="resume">
 	<h2><a id="resume">Resume</a></h2>
 		<p>Studying Responsive Web Design through FreeCodeCamp.  My next project is studying and completing JavaScript and SQL.</p>
 		<p>I have done automated testing on Winrunner and QTP and managed projects through TestDirector.</p>
 		<p>Did testing in both waterfall and agile development environments. </p>
 		<p>This portfolio page is for Freecodecamp certification.  I have loaded a personal portfolio page on my Github account which I will update as soon as possible.</p>
-	
 </section>
+
 <section>
 	<h2><a id="contact">Contact</a></h2>
 	<div class="btns">
